Changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-video-player",
+  "name": "@onytgvx/expo-video-player",
   "version": "1.5.0",
   "description": "Customizable Video Player controls for Expo",
   "keywords": [
