--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onytgvx/expo-video-player",
-  "version": "1.5.6",
+  "version": "1.5.7",
   "description": "Customizable Video Player controls for Expo",
   "keywords": [
     "customizable",
@@ -25,6 +25,7 @@
     "lint:fix": "eslint \"lib/**/*.{js,ts,tsx}\" --fix"
   },
   "dependencies": {
+    "react-native-slider": "^0.11.0",
     "tslib": "^1.10.0",
     "with-default-props": "^0.2.1"
   },
